@@ -1,19 +1,25 @@
 package us.ihmc.robotEnvironmentAwareness.slam;
 
 import java.io.File;
+import java.nio.file.Paths;
+import java.text.DecimalFormat;
 import java.util.ArrayList;
-import java.util.LinkedList;
 import java.util.List;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.ScheduledFuture;
-import java.util.concurrent.TimeUnit;
+import java.util.concurrent.*;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
 
+import controller_msgs.msg.dds.REAStateRequestMessage;
 import controller_msgs.msg.dds.StereoVisionPointCloudMessage;
-import javafx.scene.paint.Color;
+import org.apache.commons.math3.stat.descriptive.moment.Mean;
+import us.ihmc.commons.Conversions;
+import us.ihmc.commons.time.Stopwatch;
+import us.ihmc.communication.IHMCROS2Callback;
 import us.ihmc.communication.ROS2Tools;
+import us.ihmc.euclid.geometry.Pose3D;
+import us.ihmc.euclid.transform.RigidBodyTransform;
 import us.ihmc.euclid.transform.interfaces.RigidBodyTransformReadOnly;
-import us.ihmc.euclid.tuple3D.Point3D;
 import us.ihmc.euclid.tuple3D.interfaces.Point3DReadOnly;
 import us.ihmc.jOctoMap.normalEstimation.NormalEstimationParameters;
 import us.ihmc.jOctoMap.ocTree.NormalOcTree;
@@ -21,17 +27,18 @@ import us.ihmc.log.LogTools;
 import us.ihmc.messager.Messager;
 import us.ihmc.pubsub.DomainFactory.PubSubImplementation;
 import us.ihmc.pubsub.subscriber.Subscriber;
+import us.ihmc.robotEnvironmentAwareness.communication.REACommunicationProperties;
 import us.ihmc.robotEnvironmentAwareness.communication.SLAMModuleAPI;
+import us.ihmc.robotEnvironmentAwareness.communication.converters.BoundingBoxMessageConverter;
 import us.ihmc.robotEnvironmentAwareness.communication.converters.OcTreeMessageConverter;
-import us.ihmc.robotEnvironmentAwareness.communication.converters.PointCloudCompression;
-import us.ihmc.robotEnvironmentAwareness.communication.packets.NormalOcTreeMessage;
+import us.ihmc.robotEnvironmentAwareness.communication.packets.BoundingBoxParametersMessage;
 import us.ihmc.robotEnvironmentAwareness.io.FilePropertyHelper;
 import us.ihmc.robotEnvironmentAwareness.perceptionSuite.PerceptionModule;
+import us.ihmc.robotEnvironmentAwareness.ros.REASourceType;
 import us.ihmc.robotEnvironmentAwareness.tools.ExecutorServiceTools;
 import us.ihmc.robotEnvironmentAwareness.tools.ExecutorServiceTools.ExceptionHandling;
-import us.ihmc.robotEnvironmentAwareness.ui.graphicsBuilders.StereoVisionPointCloudViewer;
 import us.ihmc.robotEnvironmentAwareness.updaters.OcTreeConsumer;
-import us.ihmc.ros2.Ros2Node;
+import us.ihmc.ros2.ROS2Node;
 
 public class SLAMModule implements PerceptionModule
 {
@@ -39,79 +46,137 @@ public class SLAMModule implements PerceptionModule
 
    private static final double DEFAULT_OCTREE_RESOLUTION = 0.02;
 
-   private static final Color LATEST_ORIGINAL_POINT_CLOUD_COLOR = Color.BEIGE;
-   private static final Color SOURCE_POINT_CLOUD_COLOR = Color.BLACK;
-   private static final Color LATEST_POINT_CLOUD_COLOR = Color.LIME;
-
    protected final AtomicReference<Boolean> enable;
 
    private final AtomicReference<StereoVisionPointCloudMessage> newPointCloud = new AtomicReference<>(null);
-   protected final LinkedList<StereoVisionPointCloudMessage> pointCloudQueue = new LinkedList<>();
+   protected final CopyOnWriteArrayList<StereoVisionPointCloudMessage> pointCloudQueue = new CopyOnWriteArrayList<>();
 
-   private final AtomicReference<RandomICPSLAMParameters> slamParameters;
+   private final AtomicLong mostRecentTimestampProcessed = new AtomicLong(-1);
+   protected final AtomicReference<SurfaceElementICPSLAMParameters> slamParameters;
    private final AtomicReference<NormalEstimationParameters> normalEstimationParameters;
+   private final AtomicReference<NormalEstimationParameters> frameNormalEstimationParameters;
    private final AtomicReference<Boolean> enableNormalEstimation;
    private final AtomicReference<Boolean> clearNormals;
-   protected final RandomICPSLAM slam = new RandomICPSLAM(DEFAULT_OCTREE_RESOLUTION);
 
-   private ScheduledExecutorService executorService = ExecutorServiceTools.newScheduledThreadPool(2, getClass(), ExceptionHandling.CATCH_AND_REPORT);
-   private static final int THREAD_PERIOD_MILLISECONDS = 1;
+   private final AtomicReference<Boolean> isOcTreeBoundingBoxRequested;
+   private final AtomicReference<BoundingBoxParametersMessage> atomicBoundingBoxParameters;
+   private final AtomicReference<Boolean> useBoundingBox;
+   private final AtomicBoolean clearSlam = new AtomicBoolean(false);
+
+   protected final SurfaceElementICPSLAM slam;
+
+   private static final int SLAM_PERIOD_MILLISECONDS = 250;
+   private static final int QUEUE_PERIOD_MILLISECONDS = 5;
+   private static final int MAIN_PERIOD_MILLISECONDS = 200;
+
+   private ScheduledExecutorService executorService = ExecutorServiceTools.newScheduledThreadPool(3, getClass(), ExceptionHandling.CATCH_AND_REPORT);
+   private ScheduledFuture<?> scheduledQueue;
    private ScheduledFuture<?> scheduledMain;
    private ScheduledFuture<?> scheduledSLAM;
 
+   private final Mean average = new Mean();
+   private final Stopwatch totalStopWatch = new Stopwatch();
+   private final Stopwatch updateStopwatch = new Stopwatch();
+
    private final boolean manageRosNode;
-   protected final Ros2Node ros2Node;
+   protected final ROS2Node ros2Node;
 
    private final List<OcTreeConsumer> ocTreeConsumers = new ArrayList<>();
+
+   private final SLAMHistory history = new SLAMHistory();
+   private final AtomicReference<String> slamDataExportPath;
 
    public SLAMModule(Messager messager)
    {
       this(messager, null);
    }
 
-   public SLAMModule(Ros2Node ros2Node, Messager messager)
+   public SLAMModule(ROS2Node ros2Node, Messager messager)
    {
-      this(ros2Node, messager, null);
+      this(ros2Node, messager, new RigidBodyTransform());
+   }
+
+   public SLAMModule(ROS2Node ros2Node, Messager messager, RigidBodyTransformReadOnly transformFromLocalFrameToSensor)
+   {
+      this(ros2Node, messager, transformFromLocalFrameToSensor, null);
    }
 
    public SLAMModule(Messager messager, File configurationFile)
    {
-      this(ROS2Tools.createRos2Node(PubSubImplementation.FAST_RTPS, ROS2Tools.REA_NODE_NAME), messager, configurationFile, true);
+      this(ROS2Tools.createROS2Node(PubSubImplementation.FAST_RTPS, ROS2Tools.REA_NODE_NAME), messager, configurationFile, new RigidBodyTransform(), true);
    }
 
-   public SLAMModule(Ros2Node ros2Node, Messager messager, File configurationFile)
+   public SLAMModule(ROS2Node ros2Node, Messager messager, File configurationFile)
    {
-      this(ros2Node, messager, configurationFile, false);
+      this(ros2Node, messager, configurationFile, new RigidBodyTransform(), false);
    }
 
-   public SLAMModule(Ros2Node ros2Node, Messager messager, File configurationFile, boolean manageRosNode)
+   public SLAMModule(ROS2Node ros2Node, Messager messager, RigidBodyTransformReadOnly transformFromLocalFrameToSensor, File configurationFile)
+   {
+      this(ros2Node, messager, configurationFile, transformFromLocalFrameToSensor, false);
+   }
+
+   public SLAMModule(ROS2Node ros2Node, Messager messager, File configurationFile, RigidBodyTransformReadOnly transformFromLocalFrameToSensor, boolean manageRosNode)
    {
       this.ros2Node = ros2Node;
       this.reaMessager = messager;
       this.manageRosNode = manageRosNode;
 
+      slam = new SurfaceElementICPSLAM(DEFAULT_OCTREE_RESOLUTION, transformFromLocalFrameToSensor);
+
       // TODO: Check name space and fix. Suspected atlas sensor suite and publisher.
-      ROS2Tools.createCallbackSubscription(ros2Node, StereoVisionPointCloudMessage.class, "/ihmc/stereo_vision_point_cloud", this::handlePointCloud);
-      ROS2Tools.createCallbackSubscription(ros2Node, StereoVisionPointCloudMessage.class, "/ihmc/stereo_vision_point_cloud_D435", this::handlePointCloud);
+      ROS2Tools.createCallbackSubscription(ros2Node,
+                                           ROS2Tools.MULTISENSE_STEREO_POINT_CLOUD,
+                                           this::handlePointCloud);
+      ROS2Tools.createCallbackSubscription(ros2Node,
+                                           ROS2Tools.D435_POINT_CLOUD,
+                                           this::handlePointCloud);
+      ROS2Tools.createCallbackSubscription(ros2Node,
+                                           REAStateRequestMessage.class,
+                                           REACommunicationProperties.stereoInputTopic,
+                                           this::handleREAStateRequestMessage);
+      new IHMCROS2Callback<>(ros2Node, SLAMModuleAPI.CLEAR, message -> clearSLAM());
+      new IHMCROS2Callback<>(ros2Node, SLAMModuleAPI.SHUTDOWN, message ->
+      {
+         LogTools.info("Received SHUTDOWN. Shutting down...");
+         stop();
+      });
 
       reaMessager.submitMessage(SLAMModuleAPI.UISensorPoseHistoryFrames, 1000);
 
       enable = reaMessager.createInput(SLAMModuleAPI.SLAMEnable, true);
 
-      slamParameters = reaMessager.createInput(SLAMModuleAPI.SLAMParameters, new RandomICPSLAMParameters());
+      slamParameters = reaMessager.createInput(SLAMModuleAPI.SLAMParameters, new SurfaceElementICPSLAMParameters());
 
       enableNormalEstimation = reaMessager.createInput(SLAMModuleAPI.NormalEstimationEnable, true);
       clearNormals = reaMessager.createInput(SLAMModuleAPI.NormalEstimationClear, false);
 
       reaMessager.registerTopicListener(SLAMModuleAPI.SLAMClear, (content) -> clearSLAM());
-
       reaMessager.registerTopicListener(SLAMModuleAPI.RequestEntireModuleState, update -> sendCurrentState());
 
       NormalEstimationParameters normalEstimationParametersLocal = new NormalEstimationParameters();
-      normalEstimationParametersLocal.setNumberOfIterations(10);
+      normalEstimationParametersLocal.setNumberOfIterations(1);
       normalEstimationParameters = reaMessager.createInput(SLAMModuleAPI.NormalEstimationParameters, normalEstimationParametersLocal);
 
+      NormalEstimationParameters frameNormalEstimationParametersLocal = new NormalEstimationParameters();
+      frameNormalEstimationParametersLocal.setNumberOfIterations(10);
+
+      frameNormalEstimationParameters = reaMessager.createInput(SLAMModuleAPI.FrameNormalEstimationParameters, frameNormalEstimationParametersLocal);
+
+
+      isOcTreeBoundingBoxRequested = reaMessager.createInput(SLAMModuleAPI.RequestBoundingBox, false);
+
+      useBoundingBox = reaMessager.createInput(SLAMModuleAPI.OcTreeBoundingBoxEnable, true);
+      atomicBoundingBoxParameters = reaMessager.createInput(SLAMModuleAPI.OcTreeBoundingBoxParameters,
+                                                            BoundingBoxMessageConverter.createBoundingBoxParametersMessage(-1.0f,
+                                                                                                                           -1.5f,
+                                                                                                                           -1.5f,
+                                                                                                                           2.0f,
+                                                                                                                           1.5f,
+                                                                                                                           0.5f));
+
       reaMessager.submitMessage(SLAMModuleAPI.NormalEstimationParameters, normalEstimationParametersLocal);
+      reaMessager.submitMessage(SLAMModuleAPI.FrameNormalEstimationParameters, frameNormalEstimationParametersLocal);
 
       if (configurationFile != null)
       {
@@ -120,8 +185,15 @@ public class SLAMModule implements PerceptionModule
 
          reaMessager.registerTopicListener(SLAMModuleAPI.SaveConfiguration, content -> saveConfiguration(filePropertyHelper));
       }
+      slamDataExportPath = reaMessager.createInput(SLAMModuleAPI.UISLAMDataExportDirectory);
+      reaMessager.registerTopicListener(SLAMModuleAPI.UISLAMDataExportRequest, content -> exportSLAMHistory());
 
       sendCurrentState();
+   }
+
+   private void exportSLAMHistory()
+   {
+      history.export(Paths.get(slamDataExportPath.get()));
    }
 
    public void attachOcTreeConsumer(OcTreeConsumer ocTreeConsumer)
@@ -134,19 +206,31 @@ public class SLAMModule implements PerceptionModule
       this.ocTreeConsumers.remove(ocTreeConsumer);
    }
 
+   private void handleREAStateRequestMessage(Subscriber<REAStateRequestMessage> subscriber)
+   {
+      REAStateRequestMessage newMessage = subscriber.takeNextData();
+
+      if (newMessage.getRequestResume())
+         reaMessager.submitMessage(SLAMModuleAPI.SLAMEnable, true);
+      else if (newMessage.getRequestPause()) // We guarantee to resume if requested, regardless of the pause request.
+         reaMessager.submitMessage(SLAMModuleAPI.SLAMEnable, false);
+      if (newMessage.getRequestClear())
+         clearSlam.set(true);
+   }
+
    @Override
    public void start()
    {
       LogTools.info("Starting SLAM Module");
+      totalStopWatch.start();
+      updateStopwatch.start();
+      average.clear();
       if (scheduledMain == null)
-      {
-         scheduledMain = executorService.scheduleAtFixedRate(this::updateMain, 0, THREAD_PERIOD_MILLISECONDS, TimeUnit.MILLISECONDS);
-      }
-
+         scheduledMain = executorService.scheduleAtFixedRate(this::updateMain, 0, MAIN_PERIOD_MILLISECONDS, TimeUnit.MILLISECONDS);
+      if (scheduledQueue == null)
+         scheduledQueue = executorService.scheduleAtFixedRate(this::updateQueue, 0, QUEUE_PERIOD_MILLISECONDS, TimeUnit.MILLISECONDS);
       if (scheduledSLAM == null)
-      {
-         scheduledSLAM = executorService.scheduleAtFixedRate(this::updateSLAM, 0, THREAD_PERIOD_MILLISECONDS, TimeUnit.MILLISECONDS);
-      }
+         scheduledSLAM = executorService.scheduleAtFixedRate(this::updateSLAM, 0, SLAM_PERIOD_MILLISECONDS, TimeUnit.MILLISECONDS);
    }
 
    @Override
@@ -161,6 +245,12 @@ public class SLAMModule implements PerceptionModule
       catch (Exception e)
       {
          e.printStackTrace();
+      }
+
+      if (scheduledQueue != null)
+      {
+         scheduledQueue.cancel(true);
+         scheduledQueue = null;
       }
 
       if (scheduledMain != null)
@@ -183,11 +273,18 @@ public class SLAMModule implements PerceptionModule
          executorService.shutdownNow();
          executorService = null;
       }
+
+      LogTools.info("Shutdown complete");
    }
 
    private boolean isMainThreadInterrupted()
    {
       return Thread.interrupted() || scheduledMain == null || scheduledMain.isCancelled();
+   }
+
+   private boolean isQueueThreadInterrupted()
+   {
+      return Thread.interrupted() || scheduledQueue == null || scheduledQueue.isCancelled();
    }
 
    private boolean isSLAMThreadInterrupted()
@@ -202,14 +299,39 @@ public class SLAMModule implements PerceptionModule
 
       reaMessager.submitMessage(SLAMModuleAPI.NormalEstimationEnable, enableNormalEstimation.get());
       reaMessager.submitMessage(SLAMModuleAPI.NormalEstimationParameters, normalEstimationParameters.get());
+      reaMessager.submitMessage(SLAMModuleAPI.FrameNormalEstimationParameters, frameNormalEstimationParameters.get());
+
+      reaMessager.submitMessage(SLAMModuleAPI.OcTreeBoundingBoxEnable, useBoundingBox.get());
+      reaMessager.submitMessage(SLAMModuleAPI.OcTreeBoundingBoxParameters, atomicBoundingBoxParameters.get());
    }
 
-   public void updateSLAM()
+   public void updateMain()
    {
+      if (isMainThreadInterrupted())
+         return;
+
+      if (clearSlam.getAndSet(false))
+         reaMessager.submitMessage(SLAMModuleAPI.SLAMClear, true);
+
+      slam.setNormalEstimationParameters(normalEstimationParameters.get());
+      if (clearNormals.getAndSet(false))
+         slam.clearNormals();
+      if (enableNormalEstimation.get())
+         slam.updateSurfaceNormals();
+   }
+
+   private void updateSLAM()
+   {
+      totalStopWatch.lap();
+      updateStopwatch.lap();
       if (updateSLAMInternal())
       {
          publishResults();
       }
+
+      if (isOcTreeBoundingBoxRequested.getAndSet(false))
+         reaMessager.submitMessage(SLAMModuleAPI.OcTreeBoundingBoxState,
+                                   BoundingBoxMessageConverter.convertToMessage(slam.getMapOcTree().getBoundingBox()));
    }
 
    private boolean updateSLAMInternal()
@@ -220,26 +342,41 @@ public class SLAMModule implements PerceptionModule
       if (pointCloudQueue.size() == 0)
          return false;
 
+      updateAndCompressQueue();
+
       updateSLAMParameters();
-      StereoVisionPointCloudMessage pointCloudToCompute = pointCloudQueue.getFirst();
+      StereoVisionPointCloudMessage pointCloudToCompute = pointCloudQueue.get(0);
+      slam.handleBoundingBox(pointCloudToCompute.getSensorPosition(), pointCloudToCompute.getSensorOrientation(), atomicBoundingBoxParameters.get(), useBoundingBox.get());
+      mostRecentTimestampProcessed.set(pointCloudToCompute.getTimestamp());
+
+      slam.setFrameNormalEstimationParameters(frameNormalEstimationParameters.get());
 
       boolean success;
+      slam.setComputeInParallel(slamParameters.get().getComputeFramesInParallel());
       if (slam.isEmpty())
       {
-         slam.addKeyFrame(pointCloudToCompute);
+         LogTools.debug("addKeyFrame queueSize: {} pointCloudSize: {} timestamp: {}",
+                       pointCloudQueue.size(),
+                       pointCloudToCompute.getNumberOfPoints(),
+                       pointCloudToCompute.getTimestamp());
+         slam.addKeyFrame(pointCloudToCompute, slamParameters.get().getInsertMissInOcTree());
          success = true;
       }
       else
       {
+         LogTools.debug("addFrame queueSize: {} pointCloudSize: {}, timestamp: {}",
+                       pointCloudQueue.size(),
+                       pointCloudToCompute.getNumberOfPoints(),
+                       pointCloudToCompute.getTimestamp());
          success = addFrame(pointCloudToCompute);
+         LogTools.debug("success: {} getComputationTimeForLatestFrame: {}", success, slam.getComputationTimeForLatestFrame());
       }
 
-      slam.setNormalEstimationParameters(normalEstimationParameters.get());
-      if (clearNormals.getAndSet(false))
-         slam.clearNormals();
+      NormalEstimationParameters normalEstimationParameters = new NormalEstimationParameters(this.normalEstimationParameters.get());
+      normalEstimationParameters.setNumberOfIterations(2 * this.normalEstimationParameters.get().getNumberOfIterations());
       if (enableNormalEstimation.get())
-         slam.computeOcTreeNormals();
-
+         slam.updateSurfaceNormalsInBoundingBox(normalEstimationParameters);
+         
       dequeue();
 
       return success;
@@ -247,7 +384,7 @@ public class SLAMModule implements PerceptionModule
 
    protected boolean addFrame(StereoVisionPointCloudMessage pointCloudToCompute)
    {
-      return slam.addFrame(pointCloudToCompute);
+      return slam.addFrame(pointCloudToCompute, slamParameters.get().getInsertMissInOcTree());
    }
 
    protected void queue(StereoVisionPointCloudMessage pointCloud)
@@ -255,73 +392,110 @@ public class SLAMModule implements PerceptionModule
       pointCloudQueue.add(pointCloud);
    }
 
+   private void updateAndCompressQueue()
+   {
+      StereoVisionPointCloudMessage lastPointCloud = pointCloudQueue.get(pointCloudQueue.size() - 1);
+
+      if (mostRecentTimestampProcessed.get() > -1 &&
+          Conversions.nanosecondsToSeconds(lastPointCloud.getTimestamp() - mostRecentTimestampProcessed.get()) > slamParameters.get().getLongestTimeToLag())
+      {
+         compressQueueToSize(1);
+      }
+
+      compressQueueToSize(slamParameters.get().getMaximumQueueSize());
+   }
+
+   private void compressQueueToSize(int desiredSize)
+   {
+      long timestamp = mostRecentTimestampProcessed.get();
+      int index = 0;
+      while (index < pointCloudQueue.size() - 1 && pointCloudQueue.size() > desiredSize - 1)
+      {
+         StereoVisionPointCloudMessage pointCloudMessage = pointCloudQueue.get(index);
+         StereoVisionPointCloudMessage nextPointCloudMessage = pointCloudQueue.get(index + 1);
+         if (Conversions.nanosecondsToSeconds(nextPointCloudMessage.getTimestamp() - timestamp) < slamParameters.get().getMaximumTimeBetweenFrames())
+         {
+            pointCloudQueue.remove(index);
+         }
+         else
+         {
+            timestamp = pointCloudMessage.getTimestamp();
+            index++;
+         }
+      }
+   }
+
    protected void dequeue()
    {
-      pointCloudQueue.removeFirst();
+      if (!pointCloudQueue.isEmpty())
+         pointCloudQueue.remove(0);
    }
+
+   private final DecimalFormat df = new DecimalFormat("#.##");
 
    protected void publishResults()
-   {     
-      String stringToReport = "";
+   {
       reaMessager.submitMessage(SLAMModuleAPI.QueuedBuffers, pointCloudQueue.size() + " [" + slam.getMapSize() + "]");
-      stringToReport = stringToReport + " " + slam.getMapSize() + " " + slam.getComputationTimeForLatestFrame() + " (sec) ";
-      reaMessager.submitMessage(SLAMModuleAPI.SLAMStatus, stringToReport);
 
-      NormalOcTree octreeMap = slam.getOctree();
-      NormalOcTreeMessage octreeMessage = OcTreeMessageConverter.convertToMessage(octreeMap);
+      String stringToReport = slam.getComputationTimeForLatestFrame() + " (sec) ";
+      reaMessager.submitMessage(SLAMModuleAPI.FrameComputationTime, stringToReport);
+      reaMessager.submitMessage(SLAMModuleAPI.SLAMComputationTime, df.format(updateStopwatch.lapElapsed()) + "(sec)");
+      average.increment(updateStopwatch.lapElapsed());
+      reaMessager.submitMessage(SLAMModuleAPI.AverageComputationTime, df.format(average.getResult()) + " (sec)");
 
-      reaMessager.submitMessage(SLAMModuleAPI.SLAMOctreeMapState, octreeMessage);
-      
+
+      NormalOcTree octreeMap = slam.getMapOcTree();
+      SLAMFrame latestFrame = slam.getLatestFrame();
+
+      if (latestFrame == null)
+      {
+         LogTools.warn("Latest frame is null. Skipping publish results");
+         return;
+      }
+
+      reaMessager.submitMessage(SLAMModuleAPI.SLAMOctreeMapState, OcTreeMessageConverter.convertToMessage(slam.getMapOcTree()));
+
+
+      long startTime = System.nanoTime();
+      Pose3D pose = new Pose3D(latestFrame.getCorrectedSensorPoseInWorld());
+
       for (OcTreeConsumer ocTreeConsumer : ocTreeConsumers)
       {
-         ocTreeConsumer.reportOcTree(octreeMap, slam.getLatestFrame().getSensorPose().getTranslation());
+         ocTreeConsumer.reportOcTree(octreeMap, pose);
       }
+      long endTime = System.nanoTime();
+      stringToReport = df.format(Conversions.nanosecondsToSeconds(endTime - startTime)) + " (sec)";
+      reaMessager.submitMessage(SLAMModuleAPI.ListenerComputationTime, stringToReport);
 
-      SLAMFrame latestFrame = slam.getLatestFrame();
-      Point3DReadOnly[] originalPointCloud = latestFrame.getOriginalPointCloud();
-      Point3DReadOnly[] correctedPointCloud = latestFrame.getPointCloud();
-      Point3DReadOnly[] sourcePointsToWorld = slam.getSourcePointsToWorldLatestFrame();
+      Point3DReadOnly[] originalPointCloud = latestFrame.getUncorrectedPointCloudInWorld();
+      List<? extends Point3DReadOnly> correctedPointCloud = latestFrame.getCorrectedPointCloudInWorld();
+      Point3DReadOnly[] sourcePointsToWorld = slam.getSourcePoints();
       if (originalPointCloud == null || sourcePointsToWorld == null || correctedPointCloud == null)
          return;
-      StereoVisionPointCloudMessage latestStereoMessage = createLatestFrameStereoVisionPointCloudMessage(originalPointCloud,
-                                                                                                         sourcePointsToWorld,
-                                                                                                         correctedPointCloud);
-      RigidBodyTransformReadOnly sensorPose = latestFrame.getSensorPose();
-      latestStereoMessage.getSensorPosition().set(sensorPose.getTranslation());
-      latestStereoMessage.getSensorOrientation().set(sensorPose.getRotation());
-      reaMessager.submitMessage(SLAMModuleAPI.IhmcSLAMFrameState, latestStereoMessage);
+      SLAMFrameState frameState = new SLAMFrameState();
+      frameState.setUncorrectedPointCloudInWorld(originalPointCloud);
+      frameState.setCorrectedPointCloudInWorld(correctedPointCloud);
+      frameState.setCorrespondingPointsInWorld(sourcePointsToWorld);
+      RigidBodyTransformReadOnly sensorPose = latestFrame.getCorrectedSensorPoseInWorld();
+      frameState.getSensorPosition().set(sensorPose.getTranslation());
+      frameState.getSensorOrientation().set(sensorPose.getRotation());
+      reaMessager.submitMessage(SLAMModuleAPI.IhmcSLAMFrameState, frameState);
       reaMessager.submitMessage(SLAMModuleAPI.LatestFrameConfidenceFactor, latestFrame.getConfidenceFactor());
+      history.addLatestFrameHistory(latestFrame);
+      history.addDriftCorrectionHistory(slam.getDriftCorrectionResult());
+
+
+
+      LogTools.debug("Took: {} ocTree size: {}", totalStopWatch.lapElapsed(), octreeMap.size());
+
+      stringToReport = df.format(totalStopWatch.lapElapsed()) + " (sec)";
+      reaMessager.submitMessage(SLAMModuleAPI.TotalComputationTime, stringToReport);
    }
 
-   private StereoVisionPointCloudMessage createLatestFrameStereoVisionPointCloudMessage(Point3DReadOnly[] originalPointCloud,
-                                                                                        Point3DReadOnly[] sourcePointsToWorld,
-                                                                                        Point3DReadOnly[] correctedPointCloud)
-   {
-      int numberOfPointsToPack = originalPointCloud.length + sourcePointsToWorld.length + correctedPointCloud.length;
 
-      Point3D[] pointCloudBuffer = new Point3D[numberOfPointsToPack];
-      int[] colorBuffer = new int[numberOfPointsToPack];
-      for (int i = 0; i < originalPointCloud.length; i++)
-      {
-         pointCloudBuffer[i] = new Point3D(originalPointCloud[i]);
-         colorBuffer[i] = StereoVisionPointCloudViewer.colorToInt(LATEST_ORIGINAL_POINT_CLOUD_COLOR);
-      }
-      for (int i = originalPointCloud.length; i < originalPointCloud.length + sourcePointsToWorld.length; i++)
-      {
-         pointCloudBuffer[i] = new Point3D(sourcePointsToWorld[i - originalPointCloud.length]);
-         colorBuffer[i] = StereoVisionPointCloudViewer.colorToInt(SOURCE_POINT_CLOUD_COLOR);
-      }
-      for (int i = originalPointCloud.length + sourcePointsToWorld.length; i < numberOfPointsToPack; i++)
-      {
-         pointCloudBuffer[i] = new Point3D(correctedPointCloud[i - originalPointCloud.length - sourcePointsToWorld.length]);
-         colorBuffer[i] = StereoVisionPointCloudViewer.colorToInt(LATEST_POINT_CLOUD_COLOR);
-      }
-      return PointCloudCompression.compressPointCloud(19870612L, pointCloudBuffer, colorBuffer, numberOfPointsToPack, 0.001, null);
-   }
-
-   public void updateMain()
+   public void updateQueue()
    {
-      if (isMainThreadInterrupted())
+      if (isQueueThreadInterrupted())
          return;
 
       if (enable.get())
@@ -336,15 +510,16 @@ public class SLAMModule implements PerceptionModule
 
    private void updateSLAMParameters()
    {
-      RandomICPSLAMParameters parameters = slamParameters.get();
-      slam.updateParameters(parameters);
+      slam.updateParameters(slamParameters.get());
    }
 
    public void clearSLAM()
    {
+      LogTools.info("Clearing");
       newPointCloud.set(null);
       pointCloudQueue.clear();
       slam.clear();
+      history.clearHistory();
    }
 
    public void loadConfiguration(FilePropertyHelper filePropertyHelper)
@@ -357,10 +532,20 @@ public class SLAMModule implements PerceptionModule
          enableNormalEstimation.set(enableNormalEstimationFile);
       String slamParametersFile = filePropertyHelper.loadProperty(SLAMModuleAPI.SLAMParameters.getName());
       if (slamParametersFile != null)
-         slamParameters.set(RandomICPSLAMParameters.parse(slamParametersFile));
+         slamParameters.set(SurfaceElementICPSLAMParameters.parse(slamParametersFile));
       String normalEstimationParametersFile = filePropertyHelper.loadProperty(SLAMModuleAPI.NormalEstimationParameters.getName());
       if (normalEstimationParametersFile != null)
          normalEstimationParameters.set(NormalEstimationParameters.parse(normalEstimationParametersFile));
+      String frameNormalEstimationParametersFile = filePropertyHelper.loadProperty(SLAMModuleAPI.FrameNormalEstimationParameters.getName());
+      if (frameNormalEstimationParametersFile != null)
+         frameNormalEstimationParameters.set(NormalEstimationParameters.parse(frameNormalEstimationParametersFile));
+
+      Boolean useBoundingBoxFile = filePropertyHelper.loadBooleanProperty(SLAMModuleAPI.OcTreeBoundingBoxEnable.getName());
+      if (useBoundingBoxFile != null)
+         useBoundingBox.set(useBoundingBoxFile);
+      String boundingBoxParametersFile = filePropertyHelper.loadProperty(SLAMModuleAPI.OcTreeBoundingBoxParameters.getName());
+      if (boundingBoxParametersFile != null)
+         atomicBoundingBoxParameters.set(BoundingBoxMessageConverter.parse(boundingBoxParametersFile));
    }
 
    public void saveConfiguration(FilePropertyHelper filePropertyHelper)
@@ -370,16 +555,21 @@ public class SLAMModule implements PerceptionModule
 
       filePropertyHelper.saveProperty(SLAMModuleAPI.SLAMParameters.getName(), slamParameters.get().toString());
       filePropertyHelper.saveProperty(SLAMModuleAPI.NormalEstimationParameters.getName(), normalEstimationParameters.get().toString());
+      filePropertyHelper.saveProperty(SLAMModuleAPI.FrameNormalEstimationParameters.getName(), frameNormalEstimationParameters.get().toString());
+
+      filePropertyHelper.saveProperty(SLAMModuleAPI.OcTreeBoundingBoxEnable.getName(), useBoundingBox.get());
+      filePropertyHelper.saveProperty(SLAMModuleAPI.OcTreeBoundingBoxParameters.getName(), atomicBoundingBoxParameters.get().toString());
    }
 
    private void handlePointCloud(Subscriber<StereoVisionPointCloudMessage> subscriber)
    {
       StereoVisionPointCloudMessage message = subscriber.takeNextData();
+      LogTools.trace("Received point cloud. numberOfPoints: {} timestamp: {}", message.getNumberOfPoints(), message.getTimestamp());
       newPointCloud.set(message);
       reaMessager.submitMessage(SLAMModuleAPI.DepthPointCloudState, new StereoVisionPointCloudMessage(message));
    }
 
-   public static SLAMModule createIntraprocessModule(Ros2Node ros2Node, Messager messager)
+   public static SLAMModule createIntraprocessModule(ROS2Node ros2Node, Messager messager)
    {
       return new SLAMModule(ros2Node, messager);
    }
